--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
                         <li>
                             <a href="https://github.com/maxigimenez/keepit" target="_blank"><i class="fa fa-code"></i> keepit</a> - localStorage wrapper with expiration time
                         </li>
+                        <li>
+                            <a href="https://github.com/maxigimenez/github-notify" target="_blank"><i class="fa fa-code"></i> github-notify</a> - chrome extension to watch the open issues of Github's repositories
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-8">
