--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <ul class="list-unstyled information">
                         <li><i class="glyphicon glyphicon-earphone">&nbsp;</i> +45 50 37 42 49</li>
                         <li><i class="glyphicon glyphicon-inbox">&nbsp;</i> <a href="#">gimenez.maxi@gmail.com</a></li>
-                        <li><i class="glyphicon glyphicon-globe">&nbsp;</i> <a href="#">maxigimenez.com</a></li>
+                        <!--<li><i class="glyphicon glyphicon-globe">&nbsp;</i> <a href="#">maxigimenez.com</a></li>-->
                         <li><i class="glyphicon glyphicon-map-marker">&nbsp;</i> Copenhagen, Denmark</li>
                     </ul>
                 </div>
@@ -87,6 +87,12 @@
                     <div class="clear"></div>
                     <h2>Open Projects</h2>
                     <ul class="list-unstyled projects">
+                        <li>
+                            <a href="https://github.com/maxigimenez/heroku-statics-runner" target="_blank"><i class="fa fa-code"></i> heroku-statics-runner</a> - Running statics using node in Heroku instance
+                        </li>
+                        <li>
+                            <a href="https://github.com/maxigimenez/github-notify-node" target="_blank"><i class="fa fa-code"></i> github-notify-node</a> - Fetch pull request of an specific user and repository
+                        </li>
                         <li>
                             <a href="https://github.com/maxigimenez/request" target="_blank"><i class="fa fa-code"></i> request</a> - Ajax wrapper
                         </li>
