--- a/index.html
+++ b/index.html
@@ -83,10 +83,14 @@
                         <li><i class="glyphicon glyphicon-tag"></i> Github</li>
                         <li><i class="glyphicon glyphicon-tag"></i> Heroku</li>
                         <li><i class="glyphicon glyphicon-tag"></i> Bower</li>
+                        <li><i class="glyphicon glyphicon-tag"></i> Typescript</li>
                     </ul>
                     <div class="clear"></div>
                     <h2>Open Projects</h2>
                     <ul class="list-unstyled projects">
+                        <li>
+                            <a href="http://maxigimenez.github.io/angular-atomic-notify/" target="_blank"><i class="fa fa-code"></i> angular-atomic-notify</a> - Atomic growl notifications for angular.js applications
+                        </li>
                         <li>
                             <a href="https://github.com/maxigimenez/heroku-statics-runner" target="_blank"><i class="fa fa-code"></i> heroku-statics-runner</a> - Running statics using node in Heroku instance
                         </li>
@@ -116,8 +120,21 @@
                     <ul class="list-unstyled row experience">
                         <li>
                             <div class="col-md-4">
+                                <div class="name"><a href="http://falconsocial.com" target="_blank">Falcon Social</a></div>
+                                <div class="dates"><i class="glyphicon glyphicon-calendar"></i> June 2015 - Present</div>
+                                <div class="where"><i class="glyphicon glyphicon-map-marker"></i> Copenhagen - Denmark</div>
+                            </div>
+                            <div class="col-md-8">
+                                <div class="title">Senior front-end engineer</div>
+                                <div class="description">
+                                    
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="col-md-4">
                                 <div class="name"><a href="http://olapic.com" target="_blank">Olapic</a></div>
-                                <div class="dates"><i class="glyphicon glyphicon-calendar"></i> October 2011 - Present</div>
+                                <div class="dates"><i class="glyphicon glyphicon-calendar"></i> October 2011 - June 2015</div>
                                 <div class="where"><i class="glyphicon glyphicon-map-marker"></i> Córdoba - Argentina</div>
                                 <div class="remote"><i class="glyphicon glyphicon-cloud"></i> Remote</div>
                             </div>
