update link facebook

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         </li>
                         <li>
                             <i class="fa fa-facebook">&nbsp;</i> &nbsp;
-                            <a href="https://facebook.com/maxigimenez" target="_blank">gimenez.maxi</a>
+                            <a href="https://facebook.com/gimenez.maxi" target="_blank">gimenez.maxi</a>
                         </li>
                         <li>
                             <i class="fa fa-linkedin">&nbsp;</i> &nbsp;
